--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 {% load static %}
 {% block head %}
 <meta name="google-adsense-account" content="ca-pub-1565972943494658">
-<title>TestOsakidetza - Web</title>
+<title>TestOPE - Web</title>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZM6GBKCS3R"></script>
 <script>
@@ -27,67 +27,59 @@
 {% block contenido %}
 
 
-<!--ac inicia el carousel-->
+<!--aca termina el carousel-->
+<a href="#" style="text-decoration:none;"><div class="container bg-testope">
+  <div class="row">
+    <div class="col-12 text-white p-3 text-center">
+      Pásate a <b>PREMIUM</b> para seguir donde lo dejaste, tengas acceso al 100% de aprendizaje, y la inteligencia artificial gestione tu aprendizaje
+    </div>
+  </div>
+</div></a>
+<br><br>
 <div class="container">
-  <div id="carouselExampleCaptions" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1">
-      </button>
-      </button>
-
-
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2">
-
-      </button>
-
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3">
-      </button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'img/centro-osakidetza-test-ope(1).jpg' %}" class="d-block w-100" alt="#" />
-        <div class="carousel-caption d-none d-md-block text-center">
-          <img src="{% static 'img/testOsakidetza.png' %}" class="w-50 m-5" alt="#" /><br>
-          <h5>{% trans 'First slide label' %}</h5>
-          <p>
-            {% trans 'Some representative placeholder content for the first slide.' %}
-          </p>
-        </div>
+<div class="w-100 text-center">
+  <h1 class="">OPEs vigentes</h1>
+</div>
+  <div class="row">
+    <form>
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Filtrar OPE por localidad</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          {% for dato in locality %}
+          <option>{{ dato.locality }}</option>
+          {% endfor %}
+          <option>Ver todos</option>
+        </select>
       </div>
-      <!--<div class="carousel-item">
-        <img src="{% static 'img/canyon-1740973_1280.jpg' %}" class="d-block w-100" alt="#" />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>{% trans 'Second slide label' %}</h5>
-          <p>
-            {% trans 'Some representative placeholder content for the second slide.' %}
-          </p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/woman-1822646_1280.jpg' %}" class="d-block w-100" alt="#" />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>{% trans 'Third slide label' %}</h5>
-          <p>
-            {% trans 'Some representative placeholder content for the third slide.' %}
-          </p>
-        </div>
-      </div>-->
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    </form>
   </div>
 </div>
+<br>
+<div class="container">
+  <div class="row">
+    {% for dato in ope %}
+      <div class="card" style="width: 18rem;">
+        <!--<img src="..." class="card-img-top" alt="...">-->
+        <div class="card-body">
+          <h5 class="card-title text-testope">{{ dato.name }}</h5>
+          <label class="">{{ dato.locality }}</label>,
+          <label class="">{{ dato.province }}</label>
+          <a href="{{ dato.urlOpe }}" target="_blank" class="btn bg-secondary text-white mt-1 w-100">Información oficial</a>
+          <a href="{% url 'learning_app:startTest' dato.id %}" class="btn bg-testope text-white mt-1 w-100 py-3">Comenzar</a>
 
-<!--aca termina el carousel-->
-
-<br><br>
+          <!-- Formulario para enviar POST -->
+          <form action="{% url 'learning_app:add_to_my_learning' dato.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn bg-testope text-white mt-1 w-100 py-3">
+                  Añadir a mi aprendizaje
+              </button>
+          </form>
+         
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
 
 <!--aca comienza un parrafo-->
 
@@ -95,7 +87,7 @@
   <div class="row">
 
     <p class="display-6" style="text-align: center;">
-      {% trans '¡Bienvenido a TestOsakidetza! Tu plataforma ideal para preparar oposiciones. Ofrecemos una experiencia de aprendizaje cómoda, amena y eficiente, diseñada para ayudarte a alcanzar tus metas. Conéctate con otros aspirantes, comparte experiencias y accede a recursos exclusivos. Únete a nuestra comunidad y comienza tu camino hacia el éxito hoy mismo. ¡Prepárate con TestOsakidetza!' %}
+      {% trans '¡Bienvenido a TestOPE! Tu plataforma ideal para preparar oposiciones. Ofrecemos una experiencia de aprendizaje cómoda, amena y eficiente, diseñada para ayudarte a alcanzar tus metas. Conéctate con otros aspirantes, comparte experiencias y accede a recursos exclusivos. Únete a nuestra comunidad y comienza tu camino hacia el éxito hoy mismo. ¡Prepárate con TestOsakidetza!' %}
     </p>
 
   </div>
@@ -118,45 +110,7 @@
 
 
       
-<div class="container">
-  <div class="row">
 
-    {% for category in category %}
-    <div class="col-lg-4 col-md-12 p-3">
-        
-      <div class="card" style="">
-
-        <form method="post" style="position:absolute; left:80%;">
-          {% csrf_token %}
-          <input type="hidden" name="categoryId" value="{{ category.id }}">
-          <button class="btn btn-sm m-1" type="submit" style="background-color: #250f64; color:white;">Añadir</button>
-        </form>
-
-        <img class="card-img-top" src="/{{ category.categoryImage }}" alt="...">
-        <div class="card-body">
-          <!-- <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-          <div class="row">
-            <a href="{% url 'learning_app:startTest' category.id %}" class="btn col-4"><img src="{% static 'img/testInteligenteBoton.png' %}" alt=""></a>
-            <a href="#" class="btn col-4"><img src="{% static 'img/mis50TestDificilesBoton.png' %}" alt=""></a>
-            <a href="#" class="btn col-4"><img src="{% static 'img/miPrevisionBoton.png' %}" alt=""></a>
-          </div>
-        </div>
-      </div>
-    </div> 
-    {% endfor %}
-
-  </div>
-
-
-
-
-
-
-
-
-
-</div>
 
 <!--aca terminan las categorias-->
 
@@ -164,7 +118,7 @@
 <div>
 
   <p class="display-5 text-center" style="margin-top: 80px;">
-    <b style="color:#250f64; font-size: 4em;" id="dynamic-number">{{ countUsersLearning }}</b>
+    <b style="color:#250f64; font-size: 2em;" id="dynamic-number">{{ countUsersLearning }}</b>
     <br><b>{% trans 'USUARIOS HACIENDO TEST' %}</b>
   </p>
 
