--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,7 +1,4 @@
 {% extends 'home/base.html' %}
-
-
-
 {% load i18n %}
 {% load static %}
 {% block head %}
@@ -35,7 +32,9 @@
     </div>
   </div>
 </div></a>
-<br><br>
+<div class="container my-1" style="background:url('{% static "img/testope-cabecera.png" %}');background-size:100%;height:270px;">
+
+</div>
 <div class="container">
 <div class="w-100 text-center">
   <h1 class="">OPEs vigentes</h1>
