--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -94,7 +94,7 @@
     <header
       class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none"><label><b>TestOPE.eus</b></label>
+        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none"><label><b>TestOPE.net</b></label>
         </a>
       </div>
 
