--- a/templates/home/preguntas copy 3.html
+++ b/templates/home/preguntas copy 3.html
@@ -90,10 +90,9 @@
 </form>
 
 <!-- Botón "Siguiente" inicialmente oculto -->
-<div id="nextButtonContainer" class="mt-4 text-center" style="visibility: hidden; min-height: 80px;">
-
+<div id="nextButtonContainer" class="mt-4 text-center" style="display: none;">
     <button type="submit" class="btn btn-secondary" id="nextButton">Siguiente</button>
-    <button type="submit" class="btn btn-secondary" id="listen-explanation"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-volume-up-fill" viewBox="0 0 16 16">
+    <button type="submit" class="btn btn-secondary" id="chat-input"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-volume-up-fill" viewBox="0 0 16 16">
   <path d="M11.536 14.01A8.47 8.47 0 0 0 14.026 8a8.47 8.47 0 0 0-2.49-6.01l-.708.707A7.48 7.48 0 0 1 13.025 8c0 2.071-.84 3.946-2.197 5.303z"/>
   <path d="M10.121 12.596A6.48 6.48 0 0 0 12.025 8a6.48 6.48 0 0 0-1.904-4.596l-.707.707A5.48 5.48 0 0 1 11.025 8a5.48 5.48 0 0 1-1.61 3.89z"/>
   <path d="M8.707 11.182A4.5 4.5 0 0 0 10.025 8a4.5 4.5 0 0 0-1.318-3.182L8 5.525A3.5 3.5 0 0 1 9.025 8 3.5 3.5 0 0 1 8 10.475zM6.717 3.55A.5.5 0 0 1 7 4v8a.5.5 0 0 1-.812.39L3.825 10.5H1.5A.5.5 0 0 1 1 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06"/>
@@ -139,7 +138,7 @@
 
             buttons.forEach(button => button.disabled = true); // Deshabilitar botones al responder
 
-            if (userAnswer.trim() === correctAnswer.trim()) {
+            if (userAnswer === correctAnswer) {
                 selectedButton.classList.replace("bg-testope", "bg-success"); // Respuesta correcta
                 playSound("{% static 'sound/correct.mp3' %}");
             } else {
@@ -154,8 +153,7 @@
                 });
             }
 
-            nextButtonContainer.style.visibility = "visible";
- // Mostrar botón "Siguiente"
+            nextButtonContainer.style.display = "block"; // Mostrar botón "Siguiente"
         }
 
         document.getElementById("nextButton").addEventListener("click", function () {
@@ -170,23 +168,36 @@
 </script>
 
 
-        
+        {{ learned_question_numbers }}
+        {% if progresion_questions %}
+            <ul>
+            
+                {% for question in progresion_questions %}
+                    <li>
+                        Pregunta Número: {{ question.number }} <br>
+                        Respuestas Correctas Totales: {{ question.correctAnswerCounterTotal }}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>No hay preguntas aprendidas en esta categoría.</p>
+        {% endif %}
 
             <!-- Progesion panel-->
            <div class="p-5 bg-light w-100">
     <h4 class="">Tu progresión</h4>
     {% for ua in questionList %}
-        <div class="d-inline-block rounded-circle text-center me-1"
-            style="width: 24px; height: 24px; line-height: 24px; background-color:
-            {% if ua.answerProgresionCorrect == 4 %}#1D7BAD
-            {% elif ua.answerProgresionCorrect == 3 %}#555
-            {% elif ua.answerProgresionCorrect == 2 %}#b0abde
-            {% elif ua.answerProgresionCorrect == 1 %}#e1dfff
-            {% else %}white
-            {% endif %};
-            color: black;">
-            {{ ua.number }}
-        </div>
+        {% if ua.answerProgresionCorrect == 4 or ua.answerProgresionCorrect > 4 %}
+            <div class="border" style="width:20px;height:20px;font-size:10px;text-align:center;float:left;background-color:#1D7BAD;color:white;">{{ ua.number }}</div>
+        {% elif ua.answerProgresionCorrect == 3 %}
+            <div style="width:20px;height:20px;font-size:10px;text-align:center;float:left;background-color:#555;color:white;">{{ ua.number }}</div>
+        {% elif ua.answerProgresionCorrect == 2 %}
+            <div style="width:20px;height:20px;font-size:10px;text-align:center;float:left;background-color:#b0abde;color:white;">{{ ua.number }}</div>
+        {% elif ua.answerProgresionCorrect == 1 %}
+            <div style="width:20px;height:20px;font-size:10px;text-align:center;float:left;background-color:#e1dfff;color:black;">{{ ua.number }}</div>
+        {% else %}
+            <div style="width:20px;height:20px;font-size:10px;text-align:center;float:left;background-color:white;color:black;">{{ ua.number }}</div>
+        {% endif %}
     {% endfor %}
 </div>
 
